14 September 2007
+ Maximum link size is now set in Menu's settings tab
+ Home links will now expand.
+ Updated files: templates/admin/settings.tpl

Version 1.4.0
-----------------------------------------------------------------
11 September 2007
+ Fixed bug with apostrophed link titles.

27 August 2007
+ Rewrote menu templating.
  o Each menu template is now in its own directory along with its link
    and style
  o Added a horizontal menu as example.
  o Removed basic.tpl and links directory.
  o Menu template can indicate whether it is always open or if it
    collapses (show_all variable)

+ changed style a little for new menu layout
+ added style for menu popup link to make sure it stands out
+ Updated: templates/menu_layout/basic/
           templates/menu_layout/horizontal/
           (copy to local on update)
           conf/error.php


Version 1.3.1 -- 25 July 2007
-----------------------------------------------------------------
19 July 2007
+ Bug # 1609737. Fixed site_map.tpl file. Thanks Andy
+ Updated files: site_map.tpl

Version 1.3.0
-----------------------------------------------------------------
8 June 2007
+ Updated locale.

6 June 2007
+ Fixed admin icon bug

5 June 2007
+ Wrote update scripts
+ Fixed admin logic

4 June 2007
+ Admin icon for links is now clickable. Pulls up window of options.
+ Added ability to disable floating admin links.
+ Updated files: conf/config.php, templates/admin/settings.tpl,
                 templates/links/link.tpl, templates/popup_admin.tpl

Version 1.2.1
-----------------------------------------------------------------
3 May 2007
+ Fixed bug with making home link.

Version 1.2.0
------------------------------------------------------------------
24 April 2007
+ Changed id to class in basic layout.
+ Updated files: templates/menu_layout/basic.tpl

17 April 2007
+ Fixed bug with pinning links
+ Fixed notice call in Menu_Admin
+ Changed pin keys to use title and url

16 April 2007